# perf-oriented-dev

./: .gitignore  README.md
benchmarking/: README.md  accumulate_benchmarks.py  accumulated_output-small-samples.csv  generate_jobscript.py  sbatch_jobscripts.py
benchmarking/old/: dispatch_benchmarks.py
exercises/04/: sheet_04.md  ssca2.out.2568900  submission.md
exercises/06/: submission.md
exercises/07/: submission.md
exercises/12/: analysis.txt  custom.txt  jumptable.txt  massif.out.4161  sheet_12.md
exercises/4/: submission.md
exercises/sheet10/: CMakeLists.txt  main.cpp  sheet_10.md
exercises/sheet10/include/: ArrayList.hpp  Container.hpp  IteratorBase.hpp  LinkedList.hpp  TieredArray.hpp  UnrolledLinkedList.hpp
exercises/sheet10/src/: ArrayList.cpp  LinkedList.cpp  TieredArray.cpp  UnrolledLinkedList.cpp
larger_samples/npb_bt/: CMakeLists.txt  accumulate_benchmarks.py  time-massif.sh  time-perf.sh  time-prog-only.sh
larger_samples/ssca2/: cmake_all-optimization-stages.txt  time-massif.sh  time-perf.sh  time-prog-only.sh
small_samples/: CMakeLists.txt  accumulate_data.py  benchmark_config.yaml  benchmark_on_lcc3.sh  cmake_all_o-levels.txt  dispatch_benchmarks.py  generate_table.py  raw_data.json  run_benchmark.py  sheet2.md  start_benchmark.sh  test.py  testjob.sh  testjob2.sh
small_samples/jobscripts/: delannoy.sh  filegen.sh  filesearch.sh  mmul.sh  nbody.sh  qap.sh
small_samples/mmul/: mmul_tiled.c
small_samples/qap/: qap.c
submissions/ex1/: experiments.py  jobs.sh  measurements.md  raw_data.json  raw_data_lc3.json  (+2 more)
(+18 files in other folders)
